set (ZALICZENIOWE_1 src/zaliczeniowe1.cpp)
set (TEST_INT_TREE tests/interval-tree-tests.cpp)
set (MAL_AUTO src/malowanie-autostrady.cpp)
set (KINWERSJE src/k-inwersje.cpp)
set (MECZE src/asd-mecze.cpp)
set (SORTOWANIE_KOMORKOWE src/sortowanie-komorkowe.cpp)
set (MATRYCA src/matryca.cpp)
set (BAZAREK src/bazarek.cpp)
set (VAR_SIZE src/var-size.c)

set(CMAKE_CXX_STANDARD 11)
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -Wall")

add_executable(zaliczeniowe1 ${ZALICZENIOWE_1})
add_executable(testy_drzewa ${TEST_INT_TREE})
add_executable(malowanie-autostrady ${MAL_AUTO})
add_executable(k-inwersje ${KINWERSJE})
add_executable(mecze ${MECZE})
add_executable (sortowanie_komorkowe ${SORTOWANIE_KOMORKOWE})
add_executable(matryca ${MATRYCA})
add_executable(bazarek ${BAZAREK})
add_executable(check_variable_sizes ${VAR_SIZE})
