cmake_minimum_required(VERSION 3.8)

set (LEX src/lex.cpp)
set (KAPITAN src/kapitan.cpp)
set (ZALICZENIOWE_2 src/zaliczeniowe2.cpp)
set (PROJEKTY src/projekty.cpp)
set (PARK_BITOWY src/park-bitowy.cpp)
set (ZALICZENIOWE_1 src/zaliczeniowe1.cpp)
set (INT_TREE_IMPL src/interval_tree.cpp)
set (TEST_INT_TREE src/interval-tree-tests.cpp src/interval_tree.h src/interval_tree.cpp)
set (MAL_AUTO src/malowanie-autostrady.cpp)
set (KINWERSJE src/k-inwersje.cpp)
set (MECZE src/asd-mecze.cpp)
set (SORTOWANIE_KOMORKOWE src/sortowanie-komorkowe.cpp)
set (MATRYCA src/matryca.cpp)
set (BAZAREK src/bazarek.cpp)
set (VAR_SIZE src/var-size.c)

set(CMAKE_CXX_STANDARD 11)
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -Wall")

# assignments
add_executable(lex_sort ${LEX})
add_executable(kapitan ${KAPITAN})
add_executable(zaliczeniowe2 ${ZALICZENIOWE_2})
add_executable(projekty ${PROJEKTY})
add_executable(park_bitowy ${PARK_BITOWY})
add_executable(zaliczeniowe1 ${ZALICZENIOWE_1})
add_executable(malowanie-autostrady ${MAL_AUTO})
add_executable(k-inwersje ${KINWERSJE})
add_executable(mecze ${MECZE})
add_executable (sortowanie_komorkowe ${SORTOWANIE_KOMORKOWE})
add_executable(matryca ${MATRYCA})
add_executable(bazarek ${BAZAREK})
add_executable(check_variable_sizes ${VAR_SIZE})

# playground
add_executable(suma_kwadratow src/playground/suma_kwadratow.cpp)
add_executable(estetyczne_ciagi src/playground/estetyczne_ciagi.cpp)
add_executable(wzniesienia src/playground/wzniesienia.cpp)
add_executable(zetony src/playground/zetony.cpp)
add_executable(zolnierze src/playground/zolnierze.cpp)

add_executable(interval_tree_impl ${INT_TREE_IMPL})
add_executable(testy_drzewa ${TEST_INT_TREE})
#add_dependencies(testy_drzewa interval_tree_impl)
